--- a/css/gamestyle.css
+++ b/css/gamestyle.css
@@ -1,4 +1,8 @@
-﻿#gameScreen {
+﻿body{
+    margin: 0px;
+}
+
+#gameScreen {
     position: relative;
     background-image: url("../images/background/images.jpg");
     background-size: 100%;
@@ -6,9 +10,9 @@
     width: 768px;*/
     height: 100vh;
     width:  100vw;
-    margin: 0 auto;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
-
 
 #cnv {
     width: 100%;
@@ -17,5 +21,5 @@
 
 #controller {
     width: 100%;
-    padding: 10px;
+
 }
