--- a/Brou/www/css/gamestyle.css
+++ b/Brou/www/css/gamestyle.css
@@ -4,7 +4,7 @@
 
 #gameScreen {
     position: relative;
-    background-image: url("../images/background/images.jpg");
+    background-image: url("../images/background/bg.png");
     background-size: 100%;
     /*height: 1024px;
     width: 768px;*/
